Add API definition
